crétions de la page Savoir faire et maj style.css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h2>taufana joëlle</h2>
         <div id="contact">
             <a href="tel:+33617202925">0617202925</a>
-            <div class="icone"><a href="#"><img src="icone/GitHub.png" alt="" srcset=""></a></div>
-            <div class="icone"><a href="#"><img src="icone/LinkedIn.png" alt="" srcset=""></a></div>
+            <div class="icone"><a href="https://github.com/JoeTaufana"><img src="icone/GitHub.png" alt="" srcset=""></a></div>
+            <div class="icone"><a href="www.linkedin.com/in/joelle-taufana"><img src="icone/LinkedIn.png" alt="" srcset=""></a></div>
         </div>
     </header>
     <main>
