--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <div id="contact">
             <a href="tel:+33617202925">0617202925</a>
             <div class="icone"><a href="https://github.com/JoeTaufana"><img src="icone/GitHub.png" alt="" srcset=""></a></div>
-            <div class="icone"><a href="www.linkedin.com/in/joelle-taufana"><img src="icone/LinkedIn.png" alt="" srcset=""></a></div>
+            <div class="icone"><a href="https://www.linkedin.com/in/joelle-taufana"><img src="icone/LinkedIn.png" alt="" srcset=""></a></div>
         </div>
     </header>
     <main>
     <aside class="navbar">
         <div id="menu">
-            <p>MENU</p>
+            <p>M <br>E <br>N <br>U</p>
             <!-- <div class="icone"><img src="icone/Menu.png" alt="" srcset=""></div> -->
         </div>
         <nav class="nav-menu">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="templates/savoirFaire.html">Savoir faire</a></li>
-                <li><a href="parcours.html">Parcours</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="templates/parcours.html">Parcours</a></li>
+                <li><a href="templates/portfolio.html">Portfolio</a></li>
+                <li><a href="templates/contact.html">Contact</a></li>
             </ul>
         </nav>
     </aside>
@@ -45,7 +45,9 @@
             <h1>Conceptrice et développeuse <br> d'Applications</h1>
             <p>Développeuse Front-End passionnée, autonome et curieuse, j’aime relever des défis techniques et apprendre de nouvelles technologies. <br>
                 Actuellement à la recherche d’un stage de fin de formation, d’une durée de 6 mois pour mettre en pratique mes compétences et contribuer à des projets passionnants.</p>
+                <a href="#" class="btn">En savoir +</a>
         </div >
+        
     </section>
 </main>
     <footer>
